--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -1,5 +1,5 @@
 .Footer{
-    background-color: #1d1b1b;
+    background-color: #212429;
     padding: 20px;
     display: flex;
     justify-content: space-evenly;
