--- a/src/components/header/NavBar.css
+++ b/src/components/header/NavBar.css
@@ -1,12 +1,16 @@
+hr {
+  color: white;
+}
 .NavBar a {
   text-decoration: none;
-  color: rgb(29, 29, 29);
+  color: rgb(235, 235, 235);
   letter-spacing: 2px;
   font-size: 14px;
   font-weight: 500;
 
   border-radius: 50px;
   padding: 3px 9px 3px 12px;
+  transition: 0.3s;
 }
 
 @media (max-width: 990px) {
@@ -15,20 +19,19 @@
     flex-direction: column;
     align-items: center;
     gap: 30px;
-    margin-right: 30px;
   }
 }
 
 .NavBar a:hover {
-  color: rgb(230, 230, 230);
-  background-color: rgb(0, 0, 0);
+  color: rgb(32, 32, 32);
+  background-color: rgb(235, 235, 235);
 }
 
 .CartSocialFlex {
   display: flex;
   justify-content: flex-start;
   flex-direction: row;
-  gap: 10px;
+  gap: 100px;
 }
 
 @media (max-width: 990px) {
@@ -38,11 +41,4 @@
     align-items: center;
     gap: 30px;
   }
-}
-
-.Header {
-  display: flex;
-  flex-direction: column;
-  box-shadow: 1px 1px 13px black;
-  background-color: white;
 }
