--- a/src/components/header/TopHeader.css
+++ b/src/components/header/TopHeader.css
@@ -1,17 +1,19 @@
 .TopHeader {
-  background-color: #1d1b1b;
-    color: rgb(248, 248, 248);
+  background-color: #ececec;
+    color: rgb(27, 27, 27);
     text-align: center;
-    letter-spacing: 3px;
+    letter-spacing: 1px;
     padding: 5px;
     display: flex;
     justify-content: space-around;
-    padding-top: 15px;
-    height: 50px;
+    align-items: center;
+    padding-top: 25px;
+    height: 40px;
   }
   
   .TopHeader p {
     font-size: 13px;
+    font-weight: 700;
   }
   
   .TopHeader p span {
