--- a/src/components/itemListContainer/ItemListContainer.css
+++ b/src/components/itemListContainer/ItemListContainer.css
@@ -4,7 +4,7 @@
 }
 .NavFilter {
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: baseline;
     gap: 40px;
 }
