--- a/src/components/main/Background.css
+++ b/src/components/main/Background.css
@@ -19,7 +19,7 @@
   text-align: center;
   font-size: 140px;
   color: rgb(245, 245, 245);
-  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-family: 'Colonna MT', sans-serif;
   text-shadow: 1px 3px 4px black;
   transform: translate(-15%, 20%);
 }
