--- a/src/components/main/Background.css
+++ b/src/components/main/Background.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.cdnfonts.com/css/colonna-mt');
-
 .Background {
   text-align: center;
   height: 66vh;
@@ -15,40 +13,36 @@
   background-blend-mode: darken;
 }
 
-
-
 .Background h1 {
   text-align: center;
   font-size: 140px;
   color: rgb(245, 245, 245);
-  font-family: 'Colonna MT', sans-serif;
+  font-family: "Colonna MT", sans-serif;
   text-shadow: 1px 3px 4px black;
   transform: translate(-15%, 20%);
 }
 
 @media (max-width: 990px) {
-  .Background h1{
-
-    transform: translate(0, 0);
+  .Background h1 {
+    transform: translate(0, 33px);
     font-size: 100px;
   }
 }
-
 
 .Background h2 {
   text-align: center;
   font-size: 40px;
   letter-spacing: 5px;
   color: rgb(245, 245, 245);
-  font-family: "Agency FB";
+  font-family: "agency_fb", sans-serif;
   text-shadow: 1px 1px 3px black;
   transform: translate(-15%, -10%);
 }
 
-
 @media (max-width: 990px) {
-  .Background h2{
+  .Background h2 {
     transform: translate(0, 0);
     font-size: 25px;
+    letter-spacing: 3px;
   }
 }
