Se modifica navbar

--- a/src/components/footer/FooterBottom.css
+++ b/src/components/footer/FooterBottom.css
@@ -1,7 +1,7 @@
 .FooterBottom p{
     color: white;
     text-align: center;
-    font-family: 'Agency FB';
+    font-family: 'agency_fb', sans-serif;
 }
 
 .FooterBottom{
