--- a/src/components/main/Background.css
+++ b/src/components/main/Background.css
@@ -13,13 +13,29 @@
   background-blend-mode: darken;
 }
 
+.Background div{
+  transform: translate(-15%, -10%);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+@media (max-width: 990px) {
+  .Background div {
+    transform: translate(0);
+  }
+}
+
+
 .Background h1 {
   text-align: center;
   font-size: 140px;
   color: rgb(245, 245, 245);
   font-family: "Colonna MT", sans-serif;
   text-shadow: 1px 3px 4px black;
-  transform: translate(-15%, 20%);
+  transform: translate(0, 20%);
+
 }
 
 @media (max-width: 990px) {
@@ -36,13 +52,26 @@
   color: rgb(245, 245, 245);
   font-family: "agency_fb", sans-serif;
   text-shadow: 1px 1px 3px black;
-  transform: translate(-15%, -10%);
 }
 
 @media (max-width: 990px) {
   .Background h2 {
-    transform: translate(0, 0);
     font-size: 25px;
     letter-spacing: 3px;
   }
+}
+
+
+.Background div .SeeProducts{
+  text-align: center;
+  font-size: 20px;
+  letter-spacing: 1px;
+  color: rgb(245, 245, 245);
+  font-family: "agency_fb", sans-serif;
+  text-decoration: none;
+  background-color: #212429;
+  width: 150px;
+  border-radius: 5px;
+  padding: 1px;
+  margin-top: 10px;
 }
