--- a/src/components/header/NavBar.css
+++ b/src/components/header/NavBar.css
@@ -16,12 +16,12 @@ hr {
 }
 .NavBar a {
   text-decoration: none;
-  color: rgb(134, 134, 134);
+  color: rgb(163, 163, 163);
   letter-spacing: 2px;
   font-size: 14px;
   font-weight: 500;
 
-  border-radius: 15px;
+  border-radius: 10px;
   padding: 3px 9px 3px 12px;
   transition: 0.3s;
 }
@@ -35,6 +35,9 @@ hr {
   }
 }
 
+.NavBar .hvr-underline-from-left:hover {
+  color: rgb(236, 236, 236);
+}
 
 .CartSocialFlex {
   display: flex;
