--- a/src/components/main/Services.css
+++ b/src/components/main/Services.css
@@ -1,11 +1,14 @@
 .ServicesContainer{
     text-align: center;
-    height: 80vmin;
-    color: black;
 }
 
 .ServicesContainer h3{
     font-size: 50px;
     padding-top: 300px;
     color: black;
+}
+
+.ServicesContainer img{
+    margin: 50px 0;
+    max-width: 600px;
 }
