--- a/src/components/itemDetail/ItemDetail.css
+++ b/src/components/itemDetail/ItemDetail.css
@@ -6,6 +6,8 @@
   
 }
 
+
+
 @media (max-width: 990px) {
   .Container {
     display: flex;
@@ -27,10 +29,15 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    gap: 3%;
     max-width: 500px;
     max-height: 500px;
   }
   
+
+  .OnAdd{
+    transform: translate(0, 20%);
+  }
 
 
 .ColumnImage {
@@ -49,7 +56,6 @@
 
 .Modal {
   background-color: rgba(0, 0, 0, 0.519);
-  padding-top: 150px;
 }
 
 .Modal .CreditCardsContainer {
@@ -98,18 +104,24 @@
   margin: 10px 0 0 0;
 }
 
-.DetailContainer h3 {
-  margin-top: 18px;
+.DetailContainer h4 {
+  margin-top: 10px;
   font-weight: 600;
 }
 
 .DetailContainer .Price {
   font-weight: 700;
+  display: flex;
+  align-items: center;
+  align-content: center;
+  justify-content: flex-start;
+  gap: 25%;
 }
 
 .DetailContainer .NavDetail {
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-start;
+  gap: 5%;
 }
 
 .DetailContainer .NavDetail a {
@@ -132,14 +144,13 @@
 
 .DiscountContainer {
   margin-top: 2%;
+  letter-spacing: -0.5px;
 }
 
 .PaymentsMethods {
   color: black;
   font-weight: 600;
-
   font-size: 16px;
-  text-decoration: underline;
 }
 
 .DetailContainer .NavDetail a:hover {
@@ -151,7 +162,7 @@
 }
 
 .ImageDetail {
-  max-width: 450px;
+  max-width: 500px;
 }
 
 .CreditCardsImg {
@@ -198,4 +209,15 @@
 
 p .StockProduct{
   font-weight: 800;
+}
+
+.TitleHeartFlex{
+  display: flex;
+  justify-content: flex-start;
+  gap: 5%;
+  align-items: center;
+}
+
+.DetailDescription{
+  font-size: 16px;
 }
