--- a/src/components/itemDetail/ItemDetail.css
+++ b/src/components/itemDetail/ItemDetail.css
@@ -6,7 +6,15 @@
   
 }
 
+.ModalBody{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
+.ModalBody img{
+  max-width: 300px;
+}
 
 @media (max-width: 990px) {
   .Container {
