--- a/src/components/itemCount/ItemCount.css
+++ b/src/components/itemCount/ItemCount.css
@@ -37,3 +37,11 @@
   .ModalTitle{
     font-size: 18px;
   }
+
+  .ModalBody p{
+    font-weight: 600;
+  }
+
+  .ModalBody p span{
+    font-weight: 700;
+  }
