--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,13 +1,13 @@
 header{
-    display: flex;
-    flex-direction: column;
-
+    position:sticky;
+    top: 0;
+    width: 100%;
+    z-index: 10000;
 }
 
 .HeaderFlex{
     display: flex;
     justify-content: space-around;
     align-items: center;
-
 }
 
