--- a/src/components/cart/CartListContainer.css
+++ b/src/components/cart/CartListContainer.css
@@ -11,15 +11,17 @@
 .Cart{
     display: flex;
     gap: 5%;
-    justify-content: space-evenly;
-    margin-top: 70px;
+    justify-content: center;
+    margin: 70px 10px;
 }
 
 @media (max-width: 1150px) {
     .Cart {
       display: flex;
       flex-direction: column;
-      align-items: center;
+      justify-content: center;
+      align-items:normal;
+      align-content: center;
       gap: 5%;
     }
   }
@@ -30,7 +32,7 @@
 
 
 .CartItemRight{
-    width: 500px;
+    width: auto;
     padding: 25px;
     display: flex;
     flex-direction: column;
@@ -49,11 +51,11 @@
 }
 
 .GoToPay{
-
     border-radius: 0;
     margin-bottom: 20px;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
+    gap: 20px;
     font-weight: 600;
 }
 
@@ -90,6 +92,7 @@
 .ButtonFlex{
     display: flex;
     justify-content: space-between;
+    gap: 100px;
 }
 
  .StrongProducts{
