--- a/src/components/cart/CartItem.css
+++ b/src/components/cart/CartItem.css
@@ -1,20 +1,23 @@
 
 .CartImg {
-  max-width: 220px;
+  max-width: 250px;
 }
 
 .CartFlex {
   display: flex;
-  align-items: stretch;
+  align-items: center;
+  align-content: center;
   gap: 20px;
   border: black 1px solid;
 }
 @media (max-width: 550px) {
   .CartFlex {
     margin-top: 50px;
+    margin-bottom: -50px;
     display: flex;
     flex-direction: column;
-    align-items: stretch;
+    justify-content: center;
+    align-items: center;
     align-content: center;
     border: none;
   }
@@ -33,8 +36,17 @@
   justify-content: space-between;
   align-items: flex-start;
   padding: 25px;
-
 }
+
+@media (max-width: 550px) {
+    .CartDetailFlex {
+        gap: 20px;
+        padding: 0;
+        align-items: flex-start;
+        max-width: 250px;
+    }
+  }
+  
 
 .RemoveItem {
   cursor: pointer;
