--- a/src/components/cart/CartItem.css
+++ b/src/components/cart/CartItem.css
@@ -1,28 +1,22 @@
-
 .CartImg {
-  max-width: 250px;
+  max-width: 350px;
 }
 
 .CartFlex {
   display: flex;
   align-items: center;
-  align-content: center;
+  align-content: flex-start;
   gap: 20px;
-  border: black 1px solid;
 }
-@media (max-width: 550px) {
+@media (max-width: 1950px) {
   .CartFlex {
-    margin-top: 50px;
-    margin-bottom: -50px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     align-content: center;
-    border: none;
   }
 }
-
 
 .TitlePriceFlex {
   display: flex;
@@ -35,18 +29,19 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: flex-start;
-  padding: 25px;
+  align-content: flex-start;
+  gap: 25px;
+  padding: 5px;
 }
 
 @media (max-width: 550px) {
-    .CartDetailFlex {
-        gap: 20px;
-        padding: 0;
-        align-items: flex-start;
-        max-width: 250px;
-    }
+  .CartDetailFlex {
+    gap: 20px;
+    padding: 0;
+    align-items: flex-start;
+    max-width: 250px;
   }
-  
+}
 
 .RemoveItem {
   cursor: pointer;
@@ -54,7 +49,7 @@
 
 .QuantityFlex {
   display: flex;
-  gap: 100px;
-  align-content: center;
-}
+  justify-content: space-between;
+  font-weight: 700;
 
+}
