--- a/src/components/item/Item.css
+++ b/src/components/item/Item.css
@@ -70,6 +70,14 @@
 
 }
 
+.CardPriceTotal {
+  font-weight: 500;
+  font-size: 20px;
+  text-align: left;
+  margin-top: 10px;
+
+}
+
 .CardPriceBefore {
   text-decoration: line-through;
   font-style: italic;
