--- a/src/components/footer/TopFooter.css
+++ b/src/components/footer/TopFooter.css
@@ -1,46 +1,45 @@
 .TopFooter {
   background-color: #000000;
-    color: rgb(243, 243, 243);
-    text-align: center;
-    letter-spacing: 1px;
-    padding: 5px;
+  color: rgb(243, 243, 243);
+  text-align: center;
+  letter-spacing: 1px;
+  padding: 5px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding-top: 25px;
+  height: 80px;
+}
+
+.TopFooter p {
+  font-size: 13px;
+  font-weight: 700;
+}
+
+.TopFooter p span {
+  margin: 0 10px;
+}
+
+@media (max-width: 990px) {
+  .TopFooter {
     display: flex;
-    justify-content: space-around;
+    flex-direction: column;
+    justify-content: flex-start;
+    text-align: left;
     align-items: center;
-    padding-top: 25px;
-    height: 80px;
+    height: auto;
   }
-  
+
   .TopFooter p {
-    font-size: 13px;
-    font-weight: 700;
+    font-size: 10px;
   }
-  
+
   .TopFooter p span {
-    margin: 0 10px;
+    margin: 0;
   }
-  
-  @media (max-width: 990px) {
-    .TopFooter{
-      display: flex;
-      flex-direction: column;
-      justify-content: flex-start;
-      text-align: left;
-      align-items: center;
-      height: auto;
 
-    }
-
-    .TopFooter p {
-      font-size: 10px;
-    }
-
-    .TopFooter p span {
-      margin: 0;
-    }
-    
-
-    .TruckIcon, .MoneyIcon {
-      display: none;
-    }
-    }
+  .TruckIcon,
+  .MoneyIcon {
+    display: none;
+  }
+}
