--- a/src/components/form/Form.css
+++ b/src/components/form/Form.css
@@ -74,3 +74,12 @@
 .PaymenthParagraph {
   text-align: center;
 }
+
+.ModalParagraph{
+  font-weight: 600;
+}
+
+.ModalParagraph span{
+  font-weight: 700;
+  font-style: italic;
+}
