--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -1,3 +1,5 @@
+@import url("http://allfont.net/allfont.css?fonts=agency-fb-bold");
+
 .Footer {
   background-color: #212429;
   padding: 20px;
@@ -5,13 +7,13 @@
   justify-content: space-evenly;
   align-items: center;
   align-content: center;
-  font-family: "agency_fb", sans-serif;
+  font-family: "Agency_fb", sans-serif;
 }
 
 @media (max-width: 990px) {
   .Footer {
     display: flex;
-    flex-direction: column;
+    flex-direction: column; 
     align-items: flex-start;
     gap: 30px;
   }
@@ -42,9 +44,9 @@
   font-size: 21px;
   padding: 20px 0 10px 0;
   margin: 0;
-  font-weight: 600;
   font-size: 20px;
   letter-spacing: 1px;
+  font-family: 'Agency FB Bold', arial;
 }
 
 .PaymentsMethods {
