--- a/src/components/main/Shipping.css
+++ b/src/components/main/Shipping.css
@@ -1,7 +1,78 @@
+@import url("http://allfont.net/allfont.css?fonts=agency-fb-bold");
+
+
 .ShipmentFlexImg {
   display: flex;
+  justify-content: center;
+  margin-top: 80px;
 }
 
+.ShipmentFlexImg li{
+  font-family: "agency_fb", sans-serif;
+  letter-spacing: 1.5px;
+  list-style: none;
+}
+
+.ShipmentFlexImg li span{
+  font-family: 'Agency FB Bold', arial;  
+}
 .ShipmentFlexImg img {
   max-width: 80px;
 }
+
+.ShippingContainer{
+  padding: 20px;
+  text-align: center;
+  margin-top: 50px;
+}
+
+.ShippingContainer h3{
+  font-family: 'Agency FB Bold', arial;
+}
+
+.ShippingContainer .Paragraph{
+  font-family: "agency_fb", sans-serif;
+  letter-spacing: 1.5px;
+  font-weight: 600;
+}
+
+
+.IconFlex{
+  display: flex;
+  align-items: flex-start;
+  align-content: center;
+  gap: 5%;
+  padding: 0 10px;
+  max-width: 300px;
+  font-family: "agency_fb", sans-serif;
+  letter-spacing: 1.5px;
+}
+
+.IconFlexContainer{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-content: center; 
+  gap: 2%;
+  color: rgb(94, 94, 94);
+  margin-top: 100px;
+}
+
+@media (max-width: 990px) {
+  .IconFlexContainer {
+    display: flex;
+    flex-direction: column; 
+    gap: 50px;
+  }
+}
+
+.IconFlexContainer h6{
+  font-size: 15px;
+  font-family: 'Agency FB Bold', arial;
+
+}
+
+.Icon{
+  color: rgb(94, 94, 94);
+}
+
