--- a/src/components/main/Background.css
+++ b/src/components/main/Background.css
@@ -36,33 +36,37 @@
 
 .Background h1 {
   text-align: center;
-  font-size: 140px;
+  font-size: 9vw;
   color: rgb(245, 245, 245);
   font-family: "Colonna MT", sans-serif;
   text-shadow: 1px 3px 4px black;
   transform: translate(0, 20%);
 }
 
-@media (max-width: 990px) {
+@media (max-width: 800px ) {
   .Background h1 {
-    transform: translate(0, 33px);
-    font-size: 100px;
+    font-size: 20vw;
   }
 }
 
+
+
 .Background h2 {
   text-align: center;
-  font-size: 40px;
+  font-size: 1.8vw;
   letter-spacing: 5px;
   color: rgb(245, 245, 245);
   font-family: "agency_fb", sans-serif;
   text-shadow: 1px 1px 3px black;
 }
 
-@media (max-width: 990px) {
+@media (max-width: 800px) {
   .Background h2 {
-    font-size: 25px;
-    letter-spacing: 3px;
+    font-size: 5vw;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.123);
+    backdrop-filter: blur(5px);
+    margin-top: 8px;
   }
 }
 
