Se arreglan detalles en responsive general

--- a/src/components/footer/FooterBottom.css
+++ b/src/components/footer/FooterBottom.css
@@ -7,4 +7,8 @@
 .FooterBottom {
   background-color: black;
   padding: 10px;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  gap: 1%;
 }
