--- a/src/components/cart/CartListContainer.css
+++ b/src/components/cart/CartListContainer.css
@@ -44,9 +44,10 @@
   width: 100%;
   background-color: rgb(29, 29, 29);
   color: white;
-  text-align: center;
   border-radius: 5px;
   letter-spacing: 2px;
+  font-family: "agency_fb", sans-serif;
+
 }
 
 .getTotal {
@@ -67,7 +68,9 @@
   display: flex;
   flex-direction: column;
   gap: 10px;
+  margin-top: -100px;
 }
+
 
 .GoToPay {
   border-radius: 0;
