--- a/src/components/main/Services.css
+++ b/src/components/main/Services.css
@@ -1,8 +1,149 @@
-.ServicesContainer {
+
+
+
+
+
+
+.ShippingContainer {
+  padding: 20px;
+  text-align: center;
+  margin-top: 50px;
+}
+
+.ShippingContainer h3 {
+  font-family: "agency_fb", sans-serif;
+  font-weight: 700;
+  margin-bottom: 50px;
+  text-transform: uppercase;
+  font-size: 4vw;
+}
+
+@media (max-width: 990px) {
+  .ShippingContainer h3 {
+    font-size: 8vw;
+  }
+}
+
+@media (max-width: 600px) {
+  .ShippingContainer h3 {
+    font-size: 11vw;
+  }
+}
+
+
+
+.ShippingContainer .Paragraph {
+  font-weight: 600;
   text-align: center;
 }
 
-.ServicesContainer img {
-  margin: 20px 0;
-  max-width: 600px;
+.IconFlex {
+  display: flex;
+  align-items: flex-start;
+  align-content: flex-start;
+  justify-content: center;
+  gap: 30px;
+  padding: 0 10px;
+  max-width: 800px;
+  font-family: "agency_fb", sans-serif;
+  letter-spacing: 1.5px;
+  padding: 3%;
+  margin-top: 2%;
+  margin-bottom: 2%;
+}
+
+.IconFlex h6,
+.ParagraphIconFlex {
+  text-align: left;
+}
+
+.IconFlexFirst {
+  border-right: white 1px solid;
+}
+
+@media (max-width: 990px) {
+  .IconFlexFirst {
+    border-bottom: white 1px solid;
+    border-right: none;
+  }
+}
+
+.IconFlexCenter {
+  border-right: white 1px solid;
+}
+
+@media (max-width: 990px) {
+  .IconFlexCenter {
+    border-bottom: white 1px solid;
+    border-right: none;
+    padding-bottom: 50px;
+    margin-bottom: -20px;
+  }
+}
+
+
+.IconFlexContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  color: rgb(240, 240, 240);
+  margin-top: 100px;
+  background-color: #212429;
+  border-radius: 15px;
+}
+
+@media (max-width: 990px) {
+  .IconFlexContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 50px;
+    padding-top: 20px;
+  }
+}
+
+.IconFlexContainer h6 {
+  font-size: 15px;
+  font-family: "agency_fb", sans-serif;
+  font-weight: 700;
+}
+
+.Icon {
+  color: rgb(240, 240, 240);
+  transform: translate(0px, -2px);
+}
+
+.ServicesImg{
+  max-width: 400px;
+  margin-bottom: 80px;
+}
+
+.ParagraphServices{
+  padding: 30px;
+  font-weight: 600;
+  text-align: left;
+  max-width: 400px;
+  background-color: #212429;  color: white;
+}
+
+.ContactLink{
+  font-weight: 600;
+  text-decoration: none;
+  background-color: #212429;
+  padding: 15px 20px;
+  color: rgb(228, 228, 228);
+  transform: translate(0, 200px);
+  transition: 0.7s ease;
+  border-radius: 6px;
+}
+
+.ContactLink:hover{
+  color: rgb(228, 228, 228);
+  background-color: #393e47;
+}
+
+.FlexServices{
+  display: grid;
+  justify-content: center;
 }
