--- a/src/components/main/Shipping.css
+++ b/src/components/main/Shipping.css
@@ -32,7 +32,7 @@
 .ShippingContainer h3 {
   font-family: "agency_fb", sans-serif;
   font-weight: 700;
-  margin-bottom: 50px;
+  margin-bottom: 30px;
   text-transform: uppercase;
   font-size: 4vw;
 }
@@ -43,10 +43,18 @@
   }
 }
 
+@media (max-width: 600px) {
+  .ShippingContainer h3 {
+    font-size: 11vw;
+  }
+}
+
+
 .ShippingContainer .Paragraph {
   font-weight: 600;
   text-align: center;
 }
+
 
 .IconFlex {
   display: flex;
